--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "cSpell.words": [
         "baidya",
         "getquotes",
+        "loginform",
+        "loginlogo",
         "randombox",
         "subhajit"
     ]
