login and signup component completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,11 @@
     "cSpell.words": [
         "baidya",
         "getquotes",
+        "loginbutton",
         "loginform",
         "loginlogo",
         "randombox",
-        "subhajit"
+        "subhajit",
+        "toggletext"
     ]
 }
