--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "loginform",
         "loginlogo",
         "randombox",
+        "Signup",
         "subhajit",
         "toggletext"
     ]
